<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textLabelProvider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:layout_centerHorizontal="false"
        android:textSize="20dp"
        android:text="Provider: " />

    <TextView
        android:id="@+id/textProvider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/textLabelProvider"
        android:text="@string/text_provider"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textLabelLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textLabelProvider"
        android:textSize="20dp"
        android:text="Latitude: " />

    <TextView
        android:id="@+id/textLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textProvider"
        android:layout_toRightOf="@id/textLabelLatitude"
        android:textSize="20dp"
        android:text="@string/text_latitude" />

    <TextView
        android:id="@+id/textLabelLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textLabelLatitude"
        android:textSize="20dp"
        android:text="Longitude: " />

    <TextView
        android:id="@+id/textLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textLabelLatitude"
        android:layout_toRightOf="@id/textLabelLongitude"
        android:textSize="20dp"
        android:text="@string/text_longitude" />

    <TextView
        android:id="@+id/textTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textLongitude"
        android:layout_centerHorizontal="true"
        android:text="@string/text_to" />

    <TextView
        android:id="@+id/textDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textTo"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:text="@string/text_distance" />

    <TextView
        android:id="@+id/textNewLocLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textDistance"
        android:layout_centerHorizontal="true"
        android:text="@string/text_new_location" />

    <EditText
        android:id="@+id/editLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textDistance"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/newButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editLocation"
        android:layout_alignParentRight="false"
        android:layout_centerInParent="true"
        android:layout_marginLeft="-87dp"
        android:layout_marginTop="6dp"
        android:layout_toRightOf="@id/editLocation"
        android:onClick="onNew"
        android:text="New" />

    <Button
        android:id="@+id/mapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editLocation"
        android:layout_alignStart="@id/editLocation"
        android:layout_alignParentLeft="false"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="21dp"
        android:onClick="onMap"
        android:text="Map" />

    <RadioGroup
        android:id="@+id/transportationRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newButton">

        <RadioButton
            android:id="@+id/walkRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/walk" />

        <RadioButton
            android:id="@+id/driveRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drive" />

        <RadioButton
            android:id="@+id/bikeRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bicycling" />
    </RadioGroup>
</RelativeLayout>